# aviata

./: .gitignore  .gitmodules  .travis.yml  README.md  build.sh  docker-compose.yml  docker_push.sh  init_mesh.sh  prod.Dockerfile  set_px4_params.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
controls/: CMakeLists.txt  example_fastdds_config.xml  fastdds_config.xml  package.xml
controls/canted motors study/: F550CantedMotors.m
controls/src/: aviata.cpp  aviata_drone.cpp  aviata_ground.cpp  aviata_test.cpp  demo_listener.cpp  demo_talker.cpp  drone.cpp  drone.hpp  network.cpp  network.hpp  px4_io.cpp  px4_io.hpp  test.cpp
controls/src/interfaces/: CMakeLists.txt  package.xml
controls/src/lib/: aviata_mixers.h  camera_simulator.cpp  camera_simulator.hpp  docking_detector.cpp  docking_detector.hpp  drone copy.hpp  drone.cpp  drone.hpp  drone_types.hpp  dronestatus.hpp  dronetelemetry.cpp  dronetelemetry.hpp  fastdds_config.cpp  fastdds_config.hpp  image_analyzer.cpp  image_analyzer.hpp  mavsdk_callback_manager.cpp  mavsdk_callback_manager.hpp  network.cpp  network.hpp  pid_controller.cpp  pid_controller.hpp  px4_io.cpp  px4_io.hpp  px4_telemetry.cpp  px4_telemetry.hpp  telemetry.cpp  telemetry.hpp  topics.hpp  util.hpp
controls/src/lib_ground/: main_window.cpp  main_window.hpp  main_window.ui
controls/src/mavlink/: aviata_subset.h  mav_cmd.h
controls/src/mavlink/v2.0/aviata/: aviata.h  mavlink.h  testsuite.h  version.h
controls/src/mavlink/v2.0/common/: common.h  mavlink_msg_attitude_target.h  mavlink_msg_set_attitude_target.h  testsuite.h  version.h
controls/src/mavlink/v2.0/minimal/: minimal.h  version.h
controls/src/mavlink/v2.0/standard/: standard.h  version.h
controls/src/msg/: DockingInfo.msg  DroneCommand.srv  DroneDebug.msg  DroneStatus.msg  FollowerSetpoint.msg  FrameSetpoint.msg  ReferenceAttitude.msg
controls/src/srv/: DroneCommand.srv
docking/: .gitignore  CameraSimulator.py  README.md  apriltag_pdr.py  docking.py  hello.py  image_analyzer.py  video.py
docking/Camera Simulator/: CameraSimulator.py  CameraSimulatorDemo.py  SimulatorUseDemo.py  constants.py
docking/cpp_docking/: CMakeLists.txt  compile.sh  generate_makefile.sh  run.sh
docking/cpp_docking/src/: camera_simulator.cpp  camera_simulator.hpp  docking.cpp  docking_detector.cpp  docking_detector.hpp  drone.cpp  drone.hpp  drone_full_bkup.cpp  image_analyzer.cpp  image_analyzer.hpp  main.cpp  pid_controller.cpp  pid_controller.hpp  raspi_camera.cpp  raspi_camera.hpp  util.hpp
docking/docking/: camera_simulator.py  debug_window.py  docking.py  drone.py  image_analyzer.py  log.py  pid_controller.py  raspi_camera.py  target.py  util.py
docking/docking/logs/: 00:06:18.321654txt  00:48:37.472325txt  23:58:41.867951txt
docking/hw_testing/: CMakeLists.txt  docking.py  drone.py  image_analyzer.py  log.py  pid_controller.py  raspi_camera.py
docking/hw_testing/cpp/src/: docking.cpp  drone.cpp  drone.hpp  raspi_camera.cpp  raspi_camera.hpp
docking/hw_testing/src/: docking.cpp  drone.cpp  drone.hpp  image_analyzer.cpp  image_analyzer.hpp  pid_controller.cpp  raspi_camera.cpp  raspi_camera.hpp  util.hpp
docking/old/: apriltag_generator.py
docking/old/Camera Simulator/: CameraSimulator.py  SimulatorUseDemo.py  apriltagtest.py
docking/old/research-code/: colors.py  edge_detection.py
docking/raspberrypi-testing/: docking.py  docking2.py  picture.py
docking/research-code/: colors.py  distance.py
docking/servo_test/: CMakeLists.txt
docking/servo_test/src/: main.cpp
docking/simulation/: docking.py  drone_controller.py  hello-drone.py  simple-takeoff.py
ground/: ground_network.py  hello.py
ground/build-gui-Unnamed2-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h
ground/build-gui-Unnamed2-Debug/debug/: gui.ilk  moc_dialog.cpp  moc_predefs.h
ground/gui/: dialog.cpp  dialog.h  dialog.ui  gui.pro  util.h
ground/src/py_pubsub/: package.xml  setup.py
ground/src/py_pubsub/py_pubsub/: subscriber_member_function.py
mesh/: hello.py
rpi_tools/: env_setup.sh  install.sh  ld_lib_path.sh  ros_setup.sh  wait_for_mesh_network.sh
rpi_tools/rpi_updates/: Makefile  driver.cpp  file_copy.sh  rpi_updates  update.sh
rpi_tools/rpi_updates/central_node/: Makefile  execute.cpp  run.sh
simulation/: 4_drones.h  4_drones_pseudo.h  aviata_mixers.h  config.py  constants.py  constants_2drone_sim.py  constants_4_drones.py  constants_4_drones_alt.py  constants_8_drones.py  constants_aviata.py  constants_standalone_drone.py  constants_two_drones.py  drones.py  generate_all_mixers.py  generate_matrices.py  generate_matrices_2drone_sim.py  generate_matrices_aviata.py  generate_matrices_orientation_test.py  generate_matrices_standalone_drone.py  generate_matrices_two_drones.py  graphics.py  optimize_saturation.py  pid.py  px4_generate_mixer.py  px4_mixer_multirotor.py  requirements.txt  sample_mixers.h  simulate.py  simulate_vehicle.py  twodrones.h  verify_motor_outputs.py
